# checklist-webapp

./: .env.example  .gitignore  config.py  index.html  main.py  pyproject.toml  start_bot.bat
bot/handlers/: __init__.py  admin.py  checklist.py  common.py  webapp.py
bot/keyboards/: inline.py
bot/middlewares/: auth.py  db.py
bot/states/: checklist.py
db/: database.py  models.py
docs/: index.html
webapp/: index.html  server.py
